--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,11 @@ nav {
 .site-navigation a {
   text-decoration: none;
   font-size: 14px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans",
+    sans-serif;
   color: #0f0101;
   width: 335px;
+  font-weight: bold;
 }
 
 .site-navigation li:not(:last-child) {
@@ -57,6 +59,10 @@ nav {
 }
 
 /* main */
+.featured-list {
+  padding-top: 90px;
+}
+
 .featured-list-item {
   float: left;
   margin: 0px 30px 30px 0px;
@@ -65,7 +71,8 @@ nav {
 .main-content {
   width: 1110px;
   margin: auto;
-  padding-top: 105px;
+  margin-bottom: 84px;
+
 }
 
 .featured-list-item {
@@ -74,7 +81,7 @@ nav {
 
 .featured-list-item {
   width: 255px;
-  height: 320px;
+
   background-color: #e9f0fd;
   text-decoration: none;
 }
@@ -83,10 +90,139 @@ nav {
   margin-right: 0;
 }
 
-.header-shop h3 {
-  width: 200px;
-  height: 40px;
+.header-shop-link {
+  text-decoration: none;
+  font-size: 18px;
+  font-family: "Roboto"[Black];
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  line-height: 1.778;
+  text-align: left;
+  padding: 0px 12px;
+}
+
+
+
+.header-shop {
+  display: inline;
+
+}
+
+.bottom-shop {
   background-color: rgb(50, 50, 50);
-  color: #ffff;
+}
+
+.bottom-shop:hover {
+
+  background-color: rgb(26, 188, 156);
+  transition-duration: 220ms;
+}
+
+
+
+.price-shop {
+
+  float: right;
+  font-size: 18px;
+  font-family: "Roboto";
+  color: rgb(255, 255, 255);
+  line-height: 1.778;
+  text-align: center;
+  padding: 0px 12px;
+  background-color: rgba(255, 255, 255, 0.4);
+
+}
+
+.Name-of-product {
+  padding-top: 115px;
+
+}
+
+.Section-title {
+
+  font-size: 48px;
+  font-family: "Roboto"[Black];
+  color: rgb(81, 81, 81);
+  line-height: 0.667;
+  text-align: center;
+
+}
+
+.Section-title::after {
+  content: "";
+
+  width: 164px;
+  padding-bottom: 31px;
+  margin-top: 26px;
+  margin: 0 auto;
+  border-bottom: 7px solid #1abc9c;
   display: block;
+}
+
+.news-list-item {
+  float: left;
+  margin-bottom: 15px;
+  width: 347px;
+
+}
+
+.news-list-item a {
+  font-size: 0px;
+
+}
+
+.news-list {
+  list-style: none;
+  padding-top: 80px;
+}
+
+.news-list-item:not(:last-child) {
+  margin-right: 30px;
+
+}
+
+.news-sheet {
+  padding-top: 100px;
+}
+
+.subtitle::after {
+  content: "";
+  width: 164px;
+  padding-bottom: 15px;
+  border-bottom: 4px solid #1abc9c;
+  display: block;
+}
+
+.subtitle {
+  font-size: 18px;
+  font-family: "OpenSans";
+  color: rgb(85, 82, 82);
+  line-height: 1.444;
+}
+
+
+
+.click {
+  border-radius: 3px;
+  background-color: rgb(78, 198, 171);
+  font-size: 16px;
+  font-family: "OpenSans";
+  color: rgb(255, 255, 255);
+  line-height: 1.625;
+  text-align: center;
+  width: 160px;
+  height: 51px;
+  cursor: pointer;
+}
+
+.click-button {
+  padding-top: 20px;
+}
+
+.news-list-item p {
+  padding-top: 30px;
+  font-size: 14px;
+  font-family: "OpenSans";
+  color: rgb(85, 82, 82);
+  line-height: 1.857;
 }
