--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 
 .site-navigation {
   list-style: none;
-  padding: 7px 0px;
+  padding: 11px 0px;
 }
 
 .site-navigation a:hover {
@@ -99,23 +99,23 @@ nav {
 
 .header-shop-link {
   text-decoration: none;
-  font-size: 18px;
-  font-family: "Roboto";
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
   color: rgb(255, 255, 255);
   text-transform: uppercase;
   text-align: left;
-  padding: 7px 12px;
 }
 
 .header-shop {
   display: inline;
+  padding: 3px 12px 0 12px;
 }
 
 .bottom-shop {
   background-color: rgb(50, 50, 50);
 
   font-size: 18px;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   color: rgb(255, 255, 255);
 }
 
@@ -127,7 +127,7 @@ nav {
 .price-shop {
   float: right;
   font-size: 18px;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   color: rgb(255, 255, 255);
   line-height: 1.778;
   text-align: center;
@@ -137,7 +137,7 @@ nav {
 
 .Section-title {
   font-size: 48px;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   color: rgb(81, 81, 81);
 
   text-align: center;
@@ -188,8 +188,8 @@ nav {
 .subtitle {
   font-size: 18px;
   font-size: 16px;
-  font-family: "OpenSans";
-  color: rgb(85, 82, 82);
+  font-family: "Open Sans", sans-serif;
+  color: rgb(85, 82, 82, 0.9);
   line-height: 1.444;
   margin-bottom: 30px;
 }
@@ -198,7 +198,7 @@ nav {
   border-radius: 3px;
   background-color: rgb(78, 198, 171);
   font-size: 16px;
-  font-family: "OpenSans";
+  font-family: "Open Sans", sans-serif;
   color: rgb(255, 255, 255);
   line-height: 1.625;
   text-align: center;
@@ -214,7 +214,7 @@ nav {
   margin-bottom: 20px;
   font-size: 14px;
   font-size: 16px;
-  font-family: "OpenSans";
-  color: rgb(85, 82, 82);
+  font-family: "Open Sans", sans-serif;
+  color: rgb(85, 82, 82, 0.8);
   line-height: 1.857;
 }
